k8s/apps/bot-discord/web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-discord-web
  namespace: bot-discord
  labels:
    app: bot-discord-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot-discord-web
  template:
    metadata:
      labels:
        app: bot-discord-web
    spec:
      priorityClassName: pc-6-apps-priority
      # imagePullSecrets:
      #   - name: ghcr-pull-secret
      containers:
        - name: bot-discord-web
          image: placeholder
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
