k8s/apps/bot-discord/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-discord-web
  namespace: bot-discord
  labels:
    app: bot-discord-web
spec:
  type: ClusterIP
  selector:
    app: bot-discord-web
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
