k8s/apps/bot-discord/web/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bot-discord-web
  namespace: bot-discord
spec:
  hostnames:
    - placeholder
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: cilium
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bot-discord-web
          port: 8080
